tests/golden/parse_errors/import_alias_missing_name.err
Parse error at /home/junhe/compiler/tests/golden/parse_errors/import_alias_missing_name.cd:1:21: expected namespace alias after `as`, found Semicolon `;`
  import "./lib.cd" as;
                      ^
